--- a/badass.html
+++ b/badass.html
@@ -3,3 +3,7 @@
 <p>Rent from people in over 34,000 cities and 192 countries<p>
 	<a href="https://www.airbnb.com/locations"> </a>
 	<img src="http://goo.gl/mbnqBl">
+	<ul>
+  <li>Home</li>
+  <li>About</li>
+</ul>
