--- a/badass.html
+++ b/badass.html
@@ -1,9 +1,11 @@
-<h1>This is the main heading</h1>
-<h1>Find a place to stay.</h1>
-<p>Rent from people in over 34,000 cities and 192 countries<p>
-	<a href="https://www.airbnb.com/locations"> </a>
-	<img src="http://goo.gl/mbnqBl">
+<!DOCTYPE html>
+<html>
+  <body>
+  
 	<ul>
-  <li>Home</li>
-  <li>About</li>
-</ul>
+	  <li>Item 1</li>
+	  <li>Item 2</li>
+	</ul>
+	
+  </body>
+</html>
