--- a/badass.html
+++ b/badass.html
@@ -6,6 +6,11 @@
 	  <li>Item 1</li>
 	  <li>Item 2</li>
 	</ul>
+	<ul>
+	    <li>Sign Up</li>
+	    <li>Log In</li>
+	    <li>Help</li>
+	</ul>
 	
   </body>
 </html>
