--- a/badass.html
+++ b/badass.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-  
+ <div class="nav">
+  <div class="container">
 	<ul>
 	  <li>Item 1</li>
 	  <li>Item 2</li>
@@ -11,6 +12,7 @@
 	    <li>Log In</li>
 	    <li>Help</li>
 	</ul>
-	
+	</div>
+</div>
   </body>
 </html>
