--- a/badass.html
+++ b/badass.html
@@ -14,7 +14,11 @@
 	</ul>
 	</div>
 </div>
+<div class="jumbotron">
+<div class="container">
 <h1>Find a place to stay</h1>
 <p>Rent from people in over 34,000 cities and 192 countries.</p>
+</div>
+</div>
   </body>
 </html>
