added more div groups

--- a/badass.html
+++ b/badass.html
@@ -14,6 +14,9 @@
 	</ul>
 	</div>
 </div>
+<div class="learn-more">
+<div class="container">
+
 <div class="jumbotron">
 <div class="container">
 <h1>Find a place to stay</h1>
@@ -42,6 +45,8 @@
 	<p><a href="#">Learn more about trust at AirBnB</a></p>
 </div>
 
+</div>
+</div>
 
   </body>
 </html>
